--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,9 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+    
+    - name: Build the project
+      run: npm run build
 
     - name: Zip build artifacts
       run: zip -r dist.zip ./dist
