chore: release workflow 文件调整

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: release workkflow demo
+name: release workflow demo
 
 on:
   push:
@@ -52,10 +52,13 @@ jobs:
         VERSION=${GITHUB_REF##*/}
         VERSION=${VERSION#v} 
         echo "Version: $VERSION"
-        RELEASE_NOTES=$(awk -v version="[$VERSION]" '$0 ~ version {found=1} found && $0 ~ /## \[/ {exit} found {print}' CHANGELOG.md)
+        RELEASE_NOTES=$(awk -v version="[$VERSION]" '/## / { if ($0 ~ version) found=1; else if (found && $0 ~ /## \[/) exit; if (found) print }' CHANGELOG.md)
         echo "release_notes<<EOF" >> $GITHUB_ENV
         echo "$RELEASE_NOTES" >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV
+
+    - name: Print Release Notes
+      run: echo "${{ env.release_notes }}"
 
     - name: Create Release
       uses: softprops/action-gh-release@v1
