--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         VERSION=${GITHUB_REF##*/}
         VERSION=${VERSION#v} 
         echo "Version: $VERSION"
-        RELEASE_NOTES=$(awk -v version="[$VERSION]" '/## / { if ($0 ~ version) found=1; else if (found && $0 ~ /## \[/) exit; if (found) print }' CHANGELOG.md)
+        RELEASE_NOTES=$(awk -v ver="$VERSION" '$0 ~ "^## \\[" ver "\\]" { flag=1; next } $0 ~ "^## \\[" { flag=0 } flag' CHANGELOG.md)
         echo "release_notes<<EOF" >> $GITHUB_ENV
         echo "$RELEASE_NOTES" >> $GITHUB_ENV
         echo "EOF" >> $GITHUB_ENV
