--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish Release to Publish Repository
+name: Publish Release to Repository
 
 on:
   push:
@@ -17,6 +17,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+
+      - name: Cache Node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-          
 
       - name: Install Dependencies
         run: npm install
@@ -47,6 +55,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: wynn-w/release-test
+          branch: release
           token: ${{ secrets.NEW_CI_CD }}
           path: release-test
 
