--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,22 +55,22 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: wynn-w/release-test
-          branch: release
+          branch: master
           token: ${{ secrets.NEW_CI_CD }}
-          path: release-test
+          path: release-repo
 
       - name: Copy Artifacts and Release Notes to Publish Repository
         run: |
           VERSION="${{ env.version }}"
           RELEASE_NOTES="${{ env.release_notes }}"
 
-          mkdir -p release-test/releases/$VERSION
+          mkdir -p release-repo/releases/$VERSION
 
-          echo "$RELEASE_NOTES" > release-test/releases/$VERSION/RELEASE_NOTES.txt
+          echo "$RELEASE_NOTES" > release-repo/releases/$VERSION/RELEASE_NOTES.txt
 
-          cp artifacts/artifact-$VERSION.zip release-test/releases/$VERSION/
+          cp artifacts/artifact-$VERSION.zip release-repo/releases/$VERSION/
 
-          cd release-test
+          cd release-repo
 
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -81,5 +81,5 @@ jobs:
 
       - name: Push Changes to Publish Repository
         run: |
-          cd release-test
-          git push origin release
+          cd release-repo
+          git push origin master
