--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,10 +40,9 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
           RELEASE_NOTES=$(awk -v ver="$VERSION" '$0 ~ "^## \\[" ver "\\]" { flag=1; next } $0 ~ "^## \\[" { flag=0 } flag' CHANGELOG.md)
-          RELEASE_NOTES="${RELEASE_NOTES//\\/\\\\}" 
-          RELEASE_NOTES="${RELEASE_NOTES//$'\n'/\\n}" 
-
-          echo "RELEASE_NOTES=$RELEASE_NOTES" >> $GITHUB_ENV
+          echo "$RELEASE_NOTES" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+          echo "RELEASE_NOTES=${RELEASE_NOTES}"
           
 
       - name: Prepare Artifact
