chore: 输出文档类型调整

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -67,7 +67,7 @@ jobs:
 
           mkdir -p release-repo/releases/$VERSION
 
-          printf "$MIX_RELEASE_NOTES" > release-repo/releases/$VERSION/RELEASE_NOTES.txt
+          printf "$MIX_RELEASE_NOTES" > release-repo/releases/$VERSION/RELEASE_NOTES.md
 
           cp artifacts/artifact-$VERSION.zip release-repo/releases/$VERSION/
 
