--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -98,7 +98,12 @@ jobs:
           body: ${{ env.RELEASE_NOTES }}
           draft: false
           prerelease: false
-
+          run: |
+            VERSION="${{ env.VERSION }}"
+            RELEASE_NOTES="${{env.RELEASE_NOTES}}"
+            echo "$VERSION"
+            echo "$RELEASE_NOTES"
+            
       - name: Upload Release Asset to Publish Repository
         uses: actions/upload-release-asset@v1
         with:
