--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,13 +18,13 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Cache Node modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-          
+    #   - name: Cache Node modules
+    #     uses: actions/cache@v3
+    #     with:
+    #       path: ~/.npm
+    #       key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+    #       restore-keys: |
+    #         ${{ runner.os }}-node-          
 
       - name: Install Dependencies
         run: npm install
@@ -37,6 +37,14 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+  
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifact
+
       - name: Extract Version and Release Notes
         id: extract_info
         run: |
@@ -55,9 +63,6 @@ jobs:
           mkdir -p artifacts
           cp -r dist/* artifacts/
           zip -r artifacts/artifact-$VERSION.zip artifacts/
-
-      - name: Checkout Release Publish Repository
-        uses: actions/checkout@v2
 
       - name: Create Release in Target Repo
         env:
