chore: 构建文件路径调整

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,7 +71,8 @@ jobs:
       - name: Prepare Artifact
         run: |
           cd dist
-          zip -r artifact-$VERSION.zip ./* 
+          zip -r ../artifact-$VERSION.zip ./* 
+          cd ../
 
       - name: Create Release in Target Repo
         env:
